--- a/src/Chat/Client/Client.csproj
+++ b/src/Chat/Client/Client.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Method\Client.cs" />
+    <Compile Include="Method\ControlWriter.cs" />
     <Compile Include="Views\Chat.cs">
       <SubType>Form</SubType>
     </Compile>
