--- a/src/Chat/Server/Properties/Settings.settings
+++ b/src/Chat/Server/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="port" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">808</Value>
     </Setting>
+    <Setting Name="dataPath" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">data/</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
