--- a/src/Chat/Server/Server.csproj
+++ b/src/Chat/Server/Server.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Method\Server.cs" />
-    <Compile Include="Method\ControlWriter.cs" />
+    <Compile Include="Method\TextBoxWriter.cs" />
     <Compile Include="Views\Main.cs">
       <SubType>Form</SubType>
     </Compile>
