--- a/src/Chat/Client/App.config
+++ b/src/Chat/Client/App.config
@@ -10,17 +10,8 @@
     </startup>
     <userSettings>
         <Client.Properties.Settings>
-            <setting name="ip1" serializeAs="String">
-                <value>127</value>
-            </setting>
-            <setting name="ip2" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="ip3" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="ip4" serializeAs="String">
-                <value>1</value>
+            <setting name="ipAddress" serializeAs="String">
+                <value>127.0.0.1</value>
             </setting>
             <setting name="port" serializeAs="String">
                 <value>808</value>
