--- a/src/Chat/Server/App.config
+++ b/src/Chat/Server/App.config
@@ -4,37 +4,24 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="Server.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Server.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <userSettings>
         <Server.Properties.Settings>
-            <setting name="ip1" serializeAs="String">
-                <value>127</value>
+            <setting name="dataPath" serializeAs="String">
+                <value>data/</value>
             </setting>
-            <setting name="ip2" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="ip3" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="ip4" serializeAs="String">
-                <value>1</value>
+            <setting name="ipAddress" serializeAs="String">
+                <value>127.0.0.1</value>
             </setting>
             <setting name="port" serializeAs="String">
                 <value>808</value>
             </setting>
-        </Server.Properties.Settings>
-    </userSettings>
-    <applicationSettings>
-        <Server.Properties.Settings>
-            <setting name="dataPath" serializeAs="String">
-                <value>data/</value>
+            <setting name="maxBacklog" serializeAs="String">
+                <value>100</value>
             </setting>
         </Server.Properties.Settings>
-    </applicationSettings>
+    </userSettings>
 </configuration>
